@@ -1,0 +1,8 @@
+use strict;
+use warnings;
+
+use Test::NoWarnings;
+use Test::Pod::Coverage 'tests' => 2;
+
+# Test.
+pod_coverage_ok('MARC::Validator::Plugin::Field300', 'MARC::Validator::Plugin::Field300 is covered.');
